# Individual_Work_19

./: CMakeLists.txt
Individual_Work_19/: CMakeLists.txt  Individual_Work_19.cpp  Individual_Work_19.h
